<resources>
    <string name="app_name">Planet Comics</string>
    <string name="planet_comics">Planet Comics…</string>
    <string name="logo">logo</string>
    <string name="title_activity_comics_home">ComicsHomeActivity</string>
    <string name="title_home">Comics</string>
    <string name="title_dashboard">Favourites</string>
    <string name="title_explanation">About</string>
    <string name="comic_image">comic_image</string>
    <string name="favourite_icon">favourite_icon</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="dismiss">Dismiss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>