<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.codebaron.planetcomics.home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.codebaron.planetcomics.home.ui.favourites.FavouriteComicsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favourite_comics" />

    <fragment
        android:id="@+id/navigation_explanation"
        android:name="com.codebaron.planetcomics.home.ui.info.ComicExplanationFragment"
        android:label="@string/title_explanation"
        tools:layout="@layout/fragment_comic_explanation" />

</navigation>